--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@zxing/ngx-scanner": "^1.3.0",
+    "angular2-qrscanner": "^1.0.7",
     "angularx-qrcode": "^1.5.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
