--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.5",
     "mdbootstrap": "^4.7.3",
+    "ng2-qrcode-reader": "0.0.1",
     "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
