--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angularx-qrcode": "^1.5.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "dateformat": "^3.0.3",
     "firebase": "^5.8.5",
     "mdbootstrap": "^4.7.3",
     "ng2-qrcode-reader": "0.0.1",
