--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^7.2.8",
     "@angular/cdk": "^7.3.3",
     "@angular/common": "~7.2.0",
@@ -23,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@zxing/ngx-scanner": "^1.3.0",
+    "agm-direction": "^0.7.6",
     "angular2-qrscanner": "^1.0.7",
     "angularx-qrcode": "^1.5.3",
     "bootstrap": "^4.3.1",
@@ -37,7 +39,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
