--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,9 @@
               "node_modules/mdbootstrap/css/bootstrap.min.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/jspdf/dist/jspdf.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
