--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/html2canvas": "0.0.35",
+    "@types/jspdf": "^1.3.0",
     "@zxing/ngx-scanner": "^1.3.0",
     "agm-direction": "^0.7.6",
     "angular2-qrscanner": "^1.0.7",
@@ -31,6 +33,8 @@
     "core-js": "^2.5.4",
     "dateformat": "^3.0.3",
     "firebase": "^5.8.5",
+    "html2canvas": "^1.0.0-rc.1",
+    "jspdf": "^1.5.3",
     "mdbootstrap": "^4.7.3",
     "ng2-qrcode-reader": "0.0.1",
     "ngx-toastr": "^9.1.2",
