--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jspdf": "^1.3.0",
     "@zxing/ngx-scanner": "^1.3.0",
     "agm-direction": "^0.7.6",
+    "angular-web-notification": "^1.2.31",
     "angular2-qrscanner": "^1.0.7",
     "angularx-qrcode": "^1.5.3",
     "bootstrap": "^4.3.1",
@@ -37,6 +38,7 @@
     "jspdf": "^1.5.3",
     "mdbootstrap": "^4.7.3",
     "ng2-qrcode-reader": "0.0.1",
+    "ngx-push-notifications": "^7.0.2",
     "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
